# quantfut

./: README.md  pyproject.toml
quantfut-template/: .gitignore  Dockerfile  README.md
quantfut-template/.github/workflows/: ci.yml
quantfut-template/config/: example.yaml
quantfut-template/src/quantfut/: __init__.py  cli.py
quantfut-template/src/quantfut/portfolio/: backtester.py
quantfut-template/src/quantfut/risk/: utils.py
quantfut-template/src/quantfut/strategy/: sma.py
src/quantfut/: cli.py  config.py
src/quantfut/data/: loader.py
src/quantfut/execution/: broker.py
src/quantfut/portfolio/: backtester.py
src/quantfut/strategy/: base.py
tests/: test_backtester_basic.py  test_sma_strategy.py
