[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "quantfut"
version = "0.1.0"
description = "A minimal futures algorithmic trading system (backtesting + paper broker)"
readme = "README.md"
requires-python = ">=3.10"
authors = [{name="Code Copilot"}]
dependencies = [
  "pandas>=2.0",
  "numpy>=1.24",
  "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[tool.setuptools.packages.find]
where = ["src"]
